--- a/group-reflection.html
+++ b/group-reflection.html
@@ -54,7 +54,7 @@
 									<!-- Sidebar 1 -->
 
 										<section>
-											<h3>Adair Individual Reflection</h3>
+											<h3>Adair's Individual Reflection</h3>
 											<p>I was honestly really impressed with how our team worked together and we had a really fun and supportive dynamic. Everyone was very enthusiastic with regards to putting themselves forward for different tasks. I think we effectively used everybody’s strengths and collaboratively worked as a productive unit.</p>
 											<p>I studied the Natural Processing Language & Chatbots. I was also responsible for researching further the motivation of our IT project. I then programmed the IT technology I studied on GitHub and input a large part of the IT project into our website.</p>
 											<p>A small issue we at the start of the experienced was that we weren’t familiar with Microsoft teams and didn’t realise that we had to schedule a meeting and not just verbally organise so our very first meeting we didn’t have all team members present. We ironed out this issue pretty quickly and now I think we’re all more familiar with using teams.</p>
@@ -63,7 +63,7 @@
 										</section>
 
 										<section>
-											<h3>Dillon Individual Reflection</h3>
+											<h3>Dillon's Individual Reflection</h3>
 											<p>“A group of individuals converging together as a team to achieve a common goal” is what the Oxford dictionary states is the definition of a Team, and that’s exactly how our team operated and communicated. Using each other's strengths and weaknesses to our advantage, great examples includes our first meeting where we decided to work at our own pace and have deadlines before each consecutive meeting thereafter, I believe this was extremely effective and efficient in being productive for Assignment 2’s Content.</p>
 											<p>When it came to collating that unexpurgated content and organising it into an acceptable format such as a Full working HTML website. Our group once again made it a derisory task, clearing our mind for Concise, applicable content which I believe clearly states our intentions for assignment 3, and showcases our strengths, technical and general skills.</p>
 											<p>Something that I found surprising was everyone's ability to quickly get to know one another's names and become acquainted, within no time we all knew each other names, and even without a face or even webcam (at first) in these difficult times, we faced no adversity when it came to working well as a group.</p>
@@ -84,7 +84,7 @@
 
 											<span class="image featured"><img src="images/group-reflection.jpg" alt="" /></span>
 
-											<h3>What Went Well?
+											<h3>What Went Well?</h3>
 											<p>Our team connected well and were well organised from the start. We benefitted from a good mix of student that were quite new to the field of IT and those with a little more experience, meaning we had team members with a wealth of knowledge and that were able to assist with any difficulties on the technical side of things, but also some fresh out-looks at IT as an industry. All team members were eager to get involved with the work and people were assertive about what parts of the assignment they were interested in completing. At no point did we have any disagreements and the assignment. </p>
 
 											<h3>What Could Have Been Improved?</h3>
@@ -98,7 +98,14 @@
 											Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
 
 											<h3>At Least One Thing That You Have Learned About Groups.</h3>
-											<p>As a group the thing I learned most about groups is group dynamics.  When we first formed, members were uncertain of where they fit in.  As the group progressed, people seemed to form and take on rolls.  An example would be, that one member would automatically take on the role of chairman and take the minutes.  This is not something we openly discussed.  I think it is also a matter of experience.  For some members in our group, this is their first year of Uni and for others it is their final year.   </p>
+											<p>As a group the thing I learned most about groups is group dynamics.  When we first formed, members were uncertain of where they fit in.  As the group progressed, people seemed to form and take on rolls.  An example would be, that one member would automatically take on the role of chairman and take the minutes.  This is not something we openly discussed.  I think it is also a matter of experience.  For some members in our group, this is their first year of Uni and for others it is their final year.</p>
+											
+											<h3>Geoff's Individual Reflection</h3>
+											<p>I remembered clearly when it was the time to gather and create groups for the Assignment 2. At that time, I had no idea who I’m going to be with. Suddenly, I saw the chat box and realized that Nathan and Dillon were about to create a team. Without further thinking, I jumped on the chat box and said I want to team up with them.</p>
+											<p>The other thing that made me happy was there is Adair in the team, I knew Adair before and had a chat when it was the first time Anthony did a random group breakout. Surprisingly, I just knew that I am the only Asian in the team by the time the group is settled.</p>
+											<p>At first, I feel very nervous to be really honest because I’m afraid that I can’t understand clearly what my teammates speak since I have English as my second language not first. As a second language speaker I believe that there is a visible difference in the capability of speaking and understanding English between me and my teammates. Another concern is this might also affect my performance in the team.</p>
+											<p>As the time goes by, I adapt with the team and finally managed to complete the project. We did several meetings and did each of our tasks. Communication went really well between us all together and all of us is very active in replying if there is any problem with the project. I love the way this team supports each other, and I have experienced it.</p>
+											<p>When the A1 result came out, mine was not good at all and they gave me the support I need. They encouraged me to keep on going and said let’s make our best to bring my mark goes up. This makes me realize that I am not left out, they got my back. Each of us contributes well to the project, we happily divide the task and just keep on going. One thing to say to this team is they are the best.</p>
 										</article>
 
 								</div>
@@ -109,7 +116,7 @@
 									<!-- Sidebar 2 -->
 
 										<section>
-											<h3>Thomas Individual Reflection</h3>
+											<h3>Thomas's Individual Reflection</h3>
 											<p>In general, I would say that everything went well and there were no big hiccups.</p>
 											<p>Everyone was present at all of the meetings. And everyone contributed to both the conversations and the course work. Also everyone made their contribution punctually.</p>
 											<p>I think one thing we did well was delegation of tasks. Everyone took their own roles successfully.</p>
@@ -119,12 +126,11 @@
 										</section>
 
 										<section>
-											<h3>Geoff's Individual Reflection</h3>
-											<p>I remembered clearly when it was the time to gather and create groups for the Assignment 2. At that time, I had no idea who I’m going to be with. Suddenly, I saw the chat box and realized that Nathan and Dillon were about to create a team. Without further thinking, I jumped on the chat box and said I want to team up with them.</p>
-											<p>The other thing that made me happy was there is Adair in the team, I knew Adair before and had a chat when it was the first time Anthony did a random group breakout. Surprisingly, I just knew that I am the only Asian in the team by the time the group is settled.</p>
-											<p>At first, I feel very nervous to be really honest because I’m afraid that I can’t understand clearly what my teammates speak since I have English as my second language not first. As a second language speaker I believe that there is a visible difference in the capability of speaking and understanding English between me and my teammates. Another concern is this might also affect my performance in the team.</p>
-											<p>As the time goes by, I adapt with the team and finally managed to complete the project. We did several meetings and did each of our tasks. Communication went really well between us all together and all of us is very active in replying if there is any problem with the project. I love the way this team supports each other, and I have experienced it.</p>
-											<p>When the A1 result came out, mine was not good at all and they gave me the support I need. They encouraged me to keep on going and said let’s make our best to bring my mark goes up. This makes me realize that I am not left out, they got my back. Each of us contributes well to the project, we happily divide the task and just keep on going. One thing to say to this team is they are the best.</p>
+											<h3>Nathan's Individual Reflection</h3>
+											<p>In my experience with group tasks in university, there is almost always some sort of struggle involved. Whether that is due to a group mate not communicating, issues with making a group in the first place, someone leave the group, or even just people butting heads. This has been one of the few occasions throughout my three years of uni that I have been a part of a group where we have not had any of these issues.</p>
+											<p>Having said this, there were of course challenges along the way, a primary one being that we could not face to face. Even still though we were able to make regular meetings, keep in touch and up to date through messaging, and in general communicate really well.</p>
+											<p>The only thing I think we could have improved on would have been to start on the GitHub site a little bit sooner, as it did take a fair bit of work right at the end to make sure it was up to scratch. But other than that, it was a wonderful experience working with this group. </p>
+											<p></p>
 										</section>
 
 								</div>
