--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
 										<li><a href="natural-language-processing-and-chatterbots.html">Natural Language Processing and Chatterbots</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="two-sidebar.html">Two Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="team-profile.html">Team Profile</a></li>
+								<li><a href="ideal-jobs.html">Ideal Jobs</a></li>
+								<li><a href="tools.html">Tools</a></li>
+								<li><a href="it-work.html">IT Work</a></li>
+								<li><a href="it-project.html">IT Project</a></li>
+								<li><a href="group-reflection.html">Group Reflection</a></li>
 							</ul>
 						</nav>
 
@@ -168,27 +170,24 @@
 					<div class="container">
 						<div class="row">
 							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>Links to Stuff</h3>
+								<h3>Site Links</h3>
 								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan dolor</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
+									<li><a href="index.html">Home</a></li>
+									<li><a href="team-profile.html">Team Profile</a></li>
+									<li><a href="ideal-jobs.html">Ideal Jobs</a></li>
+									<li><a href="tools.html">Tools</a></li>
+									<li><a href="it-work.html">IT Work</a></li>
+									<li><a href="it-project.html">IT Project</a></li>
+									<li><a href="group-reflection.html">Group Reflection</a></li>
 								</ul>
 							</section>
 							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>More Links to Stuff</h3>
+								<h3>IT Technologies</h3>
 								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
+									<li><a href="autonomous-vehicles.html">Autonomous Vehicles</a></li>
+									<li><a href="cloud-servers-services.html">Cloud, Servers and Services</a></li>
+									<li><a href="machine-learning.html">Machine Learning</a></li>
+									<li><a href="natural-language-processing-and-chatterbots.html">Natural Language Processing and Chatterbots</a></li>
 								</ul>
 							</section>
 							<section class="col-6 col-12-narrower">
@@ -227,7 +226,7 @@
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; The IT World - By Team Indecisive</li><li>Template Design From: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 
