--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 								<h3>IT Technologies</h3>
 								<ul class="links">
 									<li><a href="autonomous-vehicles.html">Autonomous Vehicles</a></li>
-									<li><a href="clouds-servers-services.html">Cloud, Servers and Services</a></li>
+									<li><a href="clouds-servers-services.html">Clouds, servers and services</a></li>
 									<li><a href="machine-learning.html">Machine Learning</a></li>
 									<li><a href="natural-language-processing-and-chatterbots.html">Natural Language Processing and Chatterbots</a></li>
 								</ul>
