--- a/machine-learning.html
+++ b/machine-learning.html
@@ -53,8 +53,8 @@
 
 								<article>
 									<header>
-										<h2></h2>
-										<p></p>
+										<h2>Machine Learning</h2>
+										<p>by Thomas Marshman.</p>
 									</header>
 
 								
