--- a/ideal-jobs.html
+++ b/ideal-jobs.html
@@ -18,7 +18,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Ideal Jobs</a></h1>
+						<h1><a href="index.html" id="logo">Group Reflection</a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -33,10 +33,12 @@
 										<li><a href="natural-language-processing-and-chatterbots.html">Natural Language Processing and Chatterbots</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="two-sidebar.html">Two Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="team-profile.html">Team Profile</a></li>
+								<li><a href="ideal-jobs.html">Ideal Jobs</a></li>
+								<li><a href="tools.html">Tools</a></li>
+								<li><a href="it-work.html">IT Work</a></li>
+								<li><a href="it-project.html">IT Project</a></li>
+								<li><a href="group-reflection.html">Group Reflection</a></li>
 							</ul>
 						</nav>
 
@@ -53,17 +55,17 @@
 									<header>
 										<h2>Industry Data for Team's Ideal Jobs</h2>
 									</header>
-
-									<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+									
+									<span class="image featured"><img src="images/ideal-jobs.jpg" alt="" /></span>
 
 									<h3> 1.What are the Job Titles for your group's ideal jobs? How do each of these rank in terms of demand from employers?</h3>
 
 									<table style="width:100%">
   <tr>
-	  <th>Team Member</th>
-	  <th>Ideal Job</th>
-    <th>Industry/Field</th>
-    <th>Required Skills</th>
+	  <th><strong>Team Member</strong></th>
+	  <th><strong>Ideal Job</strong></th>
+    	<th><strong>Industry/Field</strong></th>
+   	 <th></strong>Required Skills</strong></th>
 		<th>Current Skills</th>
   </tr>
 	<br>
@@ -187,8 +189,7 @@ General Skill Set: Customer Service, Adaptability, communication, Providing Supp
 <li><strong> Dillon:</strong>
    My opinion on my ideal job has not changed after looked at the burning glass data as there are plenty of job postings for the job, which means competition but high frequency so ascertaining a my job should be easy enough to apply for many and at least land one that is idea for me and my skill set.
 </li>
-<li>
-Nathan:
+<li><strong> Nathan:</strong>
 
 My opinion of my ideal job has not changed after reviewing this data, if anything my opinion has greatened as I have seen just how much demand there is for people in this field. This will hopefully mean that when I graduate at the end of this year, I will be able to move into a role that can either lead to my ideal job or a job that has similar task as my ideal job. This way I can start gaining experience so that one day I can move into my ideal job with confidence that I have the skills necessary to perform it well.
 </li>
@@ -229,27 +230,24 @@ By looking at the Burning Glass Data result, my Ideal Job might be the least wan
 					<div class="container">
 						<div class="row">
 							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>Links to Stuff</h3>
+								<h3>Site Links</h3>
 								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan dolor</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
+									<li><a href="index.html">Home</a></li>
+									<li><a href="team-profile.html">Team Profile</a></li>
+									<li><a href="ideal-jobs.html">Ideal Jobs</a></li>
+									<li><a href="tools.html">Tools</a></li>
+									<li><a href="it-work.html">IT Work</a></li>
+									<li><a href="it-project.html">IT Project</a></li>
+									<li><a href="group-reflection.html">Group Reflection</a></li>
 								</ul>
 							</section>
 							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>More Links to Stuff</h3>
+								<h3>IT Technologies</h3>
 								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
+									<li><a href="autonomous-vehicles.html">Autonomous Vehicles</a></li>
+									<li><a href="clouds-servers-services.html">Clouds, servers and services</a></li>
+									<li><a href="machine-learning.html">Machine Learning</a></li>
+									<li><a href="natural-language-processing-and-chatterbots.html">Natural Language Processing and Chatterbots</a></li>
 								</ul>
 							</section>
 							<section class="col-6 col-12-narrower">
@@ -288,7 +286,7 @@ By looking at the Burning Glass Data result, my Ideal Job might be the least wan
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; The IT World - By Team Indecisive</li><li>Template Design From: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 
