--- a/ideal-jobs.html
+++ b/ideal-jobs.html
@@ -65,8 +65,8 @@
 	  <th><strong>Team Member</strong></th>
 	  <th><strong>Ideal Job</strong></th>
     	<th><strong>Industry/Field</strong></th>
-   	 <th></strong>Required Skills</strong></th>
-		<th>Current Skills</th>
+   	 <th><strong>Required Skills</strong></th>
+		<th><strong>Current Skills</strong></th>
   </tr>
 	<br>
   <tr>
