--- a/it-project.html
+++ b/it-project.html
@@ -113,7 +113,7 @@
 												<p>An honest charity choser</p>
 											</header>
 											
-											<span class="image featured"><img src="images/it-projects.jpg" alt="" /></span>
+											<span class="image featured"><img src="images/it-project.jpg" alt="" /></span>
 											
 											<h3>Overview</h3>
 											<p>	Our project is to develop a website that will enable users to find a wide variety of charity works, 
