--- a/machine-learning.html
+++ b/machine-learning.html
@@ -18,7 +18,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Group Reflection</a></h1>
+						<h1><a href="index.html" id="logo">Machine Learning<em>by Thomas Marshman</em></a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -56,6 +56,8 @@
 										<h2>Machine Learning</h2>
 										<p>by Thomas Marshman.</p>
 									</header>
+									
+									<span class="image featured"><img src="images/home-machine-learning.jpg" alt="" /></span>
 
 								
 									<p>	<h1>Machine Learning</h1>
