--- a/natural-language-processing-and-chatterbots.html
+++ b/natural-language-processing-and-chatterbots.html
@@ -18,7 +18,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Group Reflection</a></h1>
+						<h1><a href="index.html" id="logo"Natural Language Processing and Chatterbots <em>by Adair Grant</em></a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
