--- a/natural-language-processing-and-chatterbots.html
+++ b/natural-language-processing-and-chatterbots.html
@@ -56,6 +56,7 @@
 										<h2>Natural Language Processing and Chatbots</h2>
 										<p>by Adair Grant.</p>
 									</header>
+									<span class="image featured"><img src="images/home-natural-learning-process.jpg" alt="" /></span>
 	
 									<h3>What does it do? </h3>
 
