--- a/autonomous-vehicles.html
+++ b/autonomous-vehicles.html
@@ -18,7 +18,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Group Reflection</a></h1>
+						<h1><a href="index.html" id="logo"Autonomous Vehicles <em>by Nathan Askew</em></a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
