--- a/clouds-servers-services.html
+++ b/clouds-servers-services.html
@@ -18,7 +18,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Group Reflection</a></h1>
+						<h1><a href="index.html" id="logo">Clouds, servers and services <em>by Geoffrey Timothy</a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
