--- a/team-profile.html
+++ b/team-profile.html
@@ -51,7 +51,7 @@
 									<div class="row">
 						  <div class="column">
 						    <div class="card">
-						      <img src="images/nathan.jpg" alt="Nathan Askew" style="width:100%">
+						      <img src="images/nathan.jpg" alt="Nathan Askew" style="width:500px;height:500px;">
 						      <div class="container">
 						        <h2>Nathan Askew</h2>
 						        <p class="title">Nice Guy</p>
@@ -63,7 +63,7 @@
 						  </div>
 						  <div class="column">
 						    <div class="card">
-						      <img src="images/Dillon.jpg" alt="Dillon Foenander" style="width:100%">
+						      <img src="images/Dillon.jpg" alt="Dillon Foenander" style="width:500px;height:500px;">
 						      <div class="container">
 						        <h2>Dillon Foenander</h2>
 						        <p class="title">Art Director</p>
@@ -75,7 +75,7 @@
 						  </div>
 						  <div class="column">
 						    <div class="card">
-						      <img src="images/Tom.jpg" alt="Tom Marshman" style="width:100%">
+						      <img src="images/Tom.jpg" alt="Tom Marshman" style="width:500px;height:500px;">
 						      <div class="container">
 						        <h2>Tom Marshman</h2>
 						        <p class="title">Designer</p>
@@ -88,7 +88,7 @@
 						</div>
 						<div class="column">
 							<div class="card">
-								<img src="images/Adair.png" alt="Adair Grant" style="width:100%">
+								<img src="images/Adair.png" alt="Adair Grant" style="width:500px;height:500px;">
 								<div class="container">
 									<h2>Adair Grant</h2>
 									<p class="title">Designer</p>
@@ -101,7 +101,7 @@
 					</div>
 					<div class="column">
 						<div class="card">
-							<img src="images/Geoffrey.png" alt="Geoffrey Timothy" style="width:100%">
+							<img src="images/Geoffrey.png" alt="Geoffrey Timothy" style="width:500px;height:500px;">
 							<div class="container">
 								<h2>Geoffrey Timothy</h2>
 								<p class="title">Designer</p>
