--- a/team-profile.html
+++ b/team-profile.html
@@ -40,81 +40,52 @@
 						</nav>
 
 				</div>
-			<!-- Main -->
+			<!-- Posts -->
 				<section class="wrapper style1">
 					<div class="container">
-						<div id="content">
-							<!-- Content -->
-								<article>
-									<header>
-										<h2>Meet Our Team</h2>
-									</header>
-
-									<div class="row">
-						  <div class="column">
-						    <div class="card">
-						      <img src="images/nathan.jpg" alt="Nathan Askew" style="width:500px;height:500px;">
-						      <div class="container">
-						        <h2>Nathan Askew</h2>
-						        <p class="title">Nice Guy</p>
-						        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-						        <p>example@example.com</p>
-						        <p><button class="button">Contact</button></p>
-						      </div>
-						    </div>
-						  </div>
-						  <div class="column">
-						    <div class="card">
-						      <img src="images/Dillon.jpg" alt="Dillon Foenander" style="width:500px;height:500px;">
-						      <div class="container">
-						        <h2>Dillon Foenander</h2>
-						        <p class="title">Art Director</p>
-						        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-						        <p>example@example.com</p>
-						        <p><button class="button">Contact</button></p>
-						      </div>
-						    </div>
-						  </div>
-						  <div class="column">
-						    <div class="card">
-						      <img src="images/Tom.jpg" alt="Tom Marshman" style="width:500px;height:500px;">
-						      <div class="container">
-						        <h2>Tom Marshman</h2>
-						        <p class="title">Designer</p>
-						        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-						        <p>example@example.com</p>
-						        <p><button class="button">Contact</button></p>
-						      </div>
-						    </div>
-						  </div>
-						</div>
-						<div class="column">
-							<div class="card">
-								<img src="images/Adair.png" alt="Adair Grant" style="width:500px;height:500px;">
-								<div class="container">
-									<h2>Adair Grant</h2>
-									<p class="title">Designer</p>
-									<p>Some text that describes me lorem ipsum ipsum lorem.</p>
-									<p>example@example.com</p>
-									<p><button class="button">Contact</button></p>
+						<div class="row">
+							<section class="col-6 col-12-narrower">
+								<div class="box post">
+									<a href="#" class="image left"><img src="images/home-autonomous-vehicles.jpg" alt="" /></a>
+									<div class="inner">
+										<h3>Autonomous Vehicles</h3>
+										<p>Autonomous vehicles are motorized vehicles that are embedded with a wide variety of sensors and receivers...</p>
+										<a href="autonomous-vehicles.html">Learn more</a>
+									</div>
 								</div>
-							</div>
+							</section>
+							<section class="col-6 col-12-narrower">
+								<div class="box post">
+									<a href="#" class="image left"><img src="images/home-cloud.jpg" alt="" /></a>
+									<div class="inner">
+										<h3>Clouds, Servers and Services</h3>
+										<p>Clouds is basically an invisible storage that stores your data on the internet.This cloud technology is not...</p>
+										<a href="clouds-servers-services.html">Learn more</a>
+									</div>
+								</div>
+							</section>
 						</div>
-					</div>
-					<div class="column">
-						<div class="card">
-							<img src="images/Geoffrey.png" alt="Geoffrey Timothy" style="width:500px;height:500px;">
-							<div class="container">
-								<h2>Geoffrey Timothy</h2>
-								<p class="title">Designer</p>
-								<p>Some text that describes me lorem ipsum ipsum lorem.</p>
-								<p>example@example.com</p>
-								<p><button class="button">Contact</button></p>
-							</div>
-						</div>
-					</div>
-				</div>
-								</article>
+						<div class="row">
+							<section class="col-6 col-12-narrower">
+								<div class="box post">
+									<a href="#" class="image left"><img src="images/home-machine-learning.jpg" alt="" /></a>
+									<div class="inner">
+										<h3>Machine Learning</h3>
+										<p>Machine learning is a subset of artificial intelligence that has become popular and ubiquitous in recent times...</p>
+										<a href="machine-learning.html">Learn more</a>
+									</div>
+								</div>
+							</section>
+							<section class="col-6 col-12-narrower">
+								<div class="box post">
+									<a href="#" class="image left"><img src="images/home-natural-learning-process.jpg" alt="" /></a>
+									<div class="inner">
+										<h3>Natural Language Processing and Chatterbots</h3>
+										<p>Natural language processing or NLP is the bridging between human language and computer language allowing computers to...</p>
+										<a href="natural-language-processing-and-chatterbots.html">Learn more</a>
+									</div>
+								</div>
+							</section>
 						</div>
 					</div>
 				</section>
