--- a/team-profile.html
+++ b/team-profile.html
@@ -46,21 +46,24 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/home-autonomous-vehicles.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/nathan.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>Autonomous Vehicles</h3>
-										<p>Autonomous vehicles are motorized vehicles that are embedded with a wide variety of sensors and receivers...</p>
-										<a href="autonomous-vehicles.html">Learn more</a>
+										<h3>Nathan Askew - s3720643@student.rmit.edu.au</h3>
+										<p>I was born in England and moved over to Australia when I was 7, while in Australia I have completed all high schooling through VCE and also undertook a VET subject at the Gordon which got me a partial completion of a cert 3 in information, digital media and technology. I then moved into university and began studying a Bachelor of Business in information systems. I am now in my final semester of a three-year degree. </p>
+										<p>Outside of study I enjoy spending time in Discord chatting with mates online and playing a few games such as CS:GO, Overwatch, RimWorld, Dirt Rally 2.0, etc. When the Weather is good, I am often out taking my dogs for a walk or working in the yard, when it is crapy whether I am normally out in the shed working on one of many different projects. </p>
+										<p>Weather that is fixing my car (again) or working on some old farm machinery or fixing up an old dirt bike. If it is mechanical or has an engine, I am more than happy to tinker with it and try to get the thing going. However, this normally has varying levels of success. </p>
 									</div>
 								</div>
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/home-cloud.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/nathan.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>Clouds, Servers and Services</h3>
-										<p>Clouds is basically an invisible storage that stores your data on the internet.This cloud technology is not...</p>
-										<a href="clouds-servers-services.html">Learn more</a>
+										<h3>Thomas Marshman - s3666127@student.rmit.edu.au</h3>
+										<p>I was born in Melbourne and have lived here all my life.  My grandparents on my mother’s side are originally from Morphu, Cypress.  They moved here in the 50s.   A few years agon I was lucky enough go travel there with them to see where they grew up.   </p>
+										<p>I currently hold an Advanced Diploma in Accounting.  I have been working as a bookkeeper / junior accountant now in a small accounting firm for around 4.5 years.  My tasks include simple to medium level tax returns, as well as other things. </p>
+										<p>My passion is music.  I play the drums in a rock band called Tomorrow’s Sky.  We have just released out first album and have played many gigs around Melbourne. </p>
+										<p>I am also a punter when it comes to music.  I really like to go and see cover bands.  Some of my favourites are: Black Sabbath, Judas Priest, Iron Maiden, AC DC, Deep Purple.  Melbourne has a vibrant cover music scene.</p>
 									</div>
 								</div>
 							</section>
@@ -68,11 +71,39 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/home-machine-learning.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/Geoffrey.png" alt="" /></a>
 									<div class="inner">
-										<h3>Machine Learning</h3>
-										<p>Machine learning is a subset of artificial intelligence that has become popular and ubiquitous in recent times...</p>
-										<a href="machine-learning.html">Learn more</a>
+										<h3>Geoffrey Timothy- s3829305@student.rmit.edu.au</h3>
+										<p>I was born in Indonesia, a country located nearby Australia. I have been living in Indo for around 18 years which is actually my whole life. I am a fresh high school graduate and continuing my education straight to the university. I have been to Melbourne twice for vacation. Studying at RMIT will be the first time for me to gain education abroad. </p>
+										<p>Playing musical instrument has always been my hobby since I was in Junior High. I joined the band extracurricular and had few gigs with my friend for school’s occasions. I can play bass, guitar and drums. I also really hope to enhance my skill as the time goes by. I enjoy listening to jazz and pop music. </p>
+										<p>Talking about experiences in IT, I could say I have zero experience in it because as I said I am a high school graduate and there were only two education pathways in Indonesia either to choose studying Social or Science. My prior school provided me with some IT basics lesson, but I think it was not university level IT. It was only how to use some certain apps such as SketchUp and some Video editing applications. My interest in IT came when I was wondering about the future and realised that nowadays world is all about technology. There is also a large job field regarding to the IT world.  </p>
+									</div>
+								</div>
+							</section>
+							<section class="col-6 col-12-narrower">
+								<div class="box post">
+									<a href="#" class="image left"><img src="images/Adair.png" alt="" /></a>
+									<div class="inner">
+										<h3>Adair Grant - s3872722@student.rmit.edu.au</h3>
+										<p>I was born and have lived in Melbourne my whole life with everyone from my family coming from Australia going back 4 generations. My 5th great-grandmother was even sent to Tasmania as convicts from Ireland in 1813 as was my 3rd grandfather in 1850. </p>
+										<p>I finished school in 2008 and soon settled into a career in the airline industry first as a domestic flight attendant for Jetstar, then as an international flight attendant with Qantas. I operated the last flight into Qantas operated from LAX to Melbourne on the 30th of March and have been stood down ever since. </p>
+										<p>I have a passion for travel and was planning to visit my 30th country this year for my 30th birthday however this plan was uprooted by the COVID-19 pandemic. I am also interested in anything fashion or beauty related and I used to love making my own formal outfits and costumes. </p>
+										<p>My experience with IT is very limited and basically consists of a basic understanding and what I have learnt in the last 6 months. I decided to pursue an education in IT soon after being stood down at Qantas as I couldn’t find employment that interested me that I was qualified for. I decided I needed to give myself some options and that IT is an area that will always provide opportunities for me. </p>
+									</div>
+								</div>
+							</section>
+						</div>
+						<div class="row">
+							<section class="col-6 col-12-narrower">
+								<div class="box post">
+									<a href="#" class="image left"><img src="images/nathan.jpg" alt="" /></a>
+									<div class="inner">
+										<h3>DIllon Foenander - s3484430@student.rmit.edu.au</h3>
+										<p>My name is Dillon Foenander, I am currently undertaking an undergraduate course at RMIT University with my major being Business Information Systems (BP308) , and Specifically Introduction to Information Technology (COSC1078) as an Elective in my Final Year and have completed Many IT and Business Subjects Alike. </p>
+										<p>My Interest in Information Technology Started at a young age, when I started playing video and computer games. From Pokémon Gold on my first handheld device, Gameboy colour to Atlantis on my first Video Gaming Console, PlayStation one, It amazed me how worlds could be built into a device for you to explore endlessly, this of course led to a passion in all Things Technology; in General, could do, especially when code was involved. </p>
+										<p>Turning words into actual computer processes such as the things that happened within certain applications such as paint and full three-dimensional worlds in games like croc and Spyro (3D action adventure games) piqued my interest Which led me to take IT specific courses in Both High School and University; Information Technology Certificate ¾ as well as Interactive Digital Media Certificate ¾. </p>
+										<p>Within a workplace and in my everyday life; I have worked in the IT Sector as a Website Administrator as well as within the retail Industry selling IT Specific Products and Services.  </p>
+										<p>I hope to use this later in life to pursue a career as a Business Analyst or any other job associated such, my learning and participation in work activities within the Sector I Hope to and Has thus far helped me acquire skills and knowledge Which are both empowering and Interesting at the same time.  </p>
 									</div>
 								</div>
 							</section>
