--- a/team-profile.html
+++ b/team-profile.html
@@ -57,7 +57,7 @@
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/nathan.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/Tom.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Thomas Marshman - s3666127@student.rmit.edu.au</h3>
 										<p>I was born in Melbourne and have lived here all my life.  My grandparents on my mother’s side are originally from Morphu, Cypress.  They moved here in the 50s.   A few years agon I was lucky enough go travel there with them to see where they grew up.   </p>
@@ -96,9 +96,9 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/nathan.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/Dillon.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>DIllon Foenander - s3484430@student.rmit.edu.au</h3>
+										<h3>Dillon Foenander - s3484430@student.rmit.edu.au</h3>
 										<p>My name is Dillon Foenander, I am currently undertaking an undergraduate course at RMIT University with my major being Business Information Systems (BP308) , and Specifically Introduction to Information Technology (COSC1078) as an Elective in my Final Year and have completed Many IT and Business Subjects Alike. </p>
 										<p>My Interest in Information Technology Started at a young age, when I started playing video and computer games. From Pokémon Gold on my first handheld device, Gameboy colour to Atlantis on my first Video Gaming Console, PlayStation one, It amazed me how worlds could be built into a device for you to explore endlessly, this of course led to a passion in all Things Technology; in General, could do, especially when code was involved. </p>
 										<p>Turning words into actual computer processes such as the things that happened within certain applications such as paint and full three-dimensional worlds in games like croc and Spyro (3D action adventure games) piqued my interest Which led me to take IT specific courses in Both High School and University; Information Technology Certificate ¾ as well as Interactive Digital Media Certificate ¾. </p>
@@ -109,12 +109,7 @@
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/home-natural-learning-process.jpg" alt="" /></a>
-									<div class="inner">
-										<h3>Natural Language Processing and Chatterbots</h3>
-										<p>Natural language processing or NLP is the bridging between human language and computer language allowing computers to...</p>
-										<a href="natural-language-processing-and-chatterbots.html">Learn more</a>
-									</div>
+									
 								</div>
 							</section>
 						</div>
